fix column layout not prioritized on mobile

--- a/components/oldMcDonutsAd.module.css
+++ b/components/oldMcDonutsAd.module.css
@@ -86,7 +86,7 @@
         font-size: 1rem;
     }
     .content .header {
-        flex-direction: column;
+        flex-direction: column !important;
     }
     
 }
